# p3-playground

./: Cargo.toml
air-ext/src/: check_constraints.rs  interaction_air_builder.rs  lib.rs
fri-ext/: Cargo.toml
fri-ext/src/: two_adic_pcs.rs
fri-ext/tests/: fri.rs  pcs.rs
hyperplonk/: Cargo.toml
hyperplonk/benches/: koala_bear_poseidon2.rs
hyperplonk/examples/: koala_bear_poseidon2.rs
hyperplonk/src/: folder.rs  interaction.rs  keygen.rs  lib.rs  proof.rs  prover.rs  symbolic.rs  util.rs  verifier.rs
hyperplonk/src/sumcheck/: eval.rs  mod.rs  regular.rs  univariate_skip.rs  zero_sumcheck.rs
hyperplonk/src/sumcheck/air/: regular.rs  univariate_skip.rs
hyperplonk/src/sumcheck/fractional_sum/: mod.rs  regular.rs
hyperplonk/tests/: interaction_air.rs  mul_air.rs  simple_air.rs  sumcheck.rs  util.rs
uni-stark-ext/src/: folder.rs  interaction.rs  interaction_air_builder.rs  keygen.rs  lib.rs  prover.rs  verifier.rs
uni-stark-ext/tests/: fib_air.rs  interaction_air.rs  mul_air.rs
uni-whir/: Cargo.toml
uni-whir/src/: lib.rs  pcs.rs
uni-whir/tests/: pcs.rs
whir/src/: pcs.rs
